2024-02-08T16:17:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7832618285 # 98
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-08
* notice: last 14d: unq all: 3 29
* notice: prev accum: outdated-unq outdated-all / unq all: 605 1038 / 622 1067
* notice: next accum: outdated-unq outdated-all / unq all: 605 1038 / 622 1068
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-02-08]

2024-02-08T08:17:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7826690101 # 97
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-08
* notice: last 14d: unq all: 3 28
* notice: prev accum: outdated-unq outdated-all / unq all: 605 1038 / 621 1066
* notice: next accum: outdated-unq outdated-all / unq all: 605 1038 / 622 1067
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-25 2024-02-08]

2024-02-08T01:00:58Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7823340628 # 96
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-08
* notice: last 14d: unq all: 3 28
* notice: prev accum: outdated-unq outdated-all / unq all: 604 1036 / 621 1066
* notice: next accum: outdated-unq outdated-all / unq all: 605 1038 / 621 1066
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-24] / []

2024-02-07T08:16:59Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7811816140 # 94