@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-08T16:17:40Z",
-  "count_outdated" : 1038,
-  "uniques_outdated" : 605,
+  "timestamp" : "2024-02-09T01:01:06Z",
+  "count_outdated" : 1040,
+  "uniques_outdated" : 606,
   "count" : 1068,
   "uniques" : 622,
   "clones" : [
-    {
-      "timestamp": "2024-01-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-26T00:00:00Z",
       "count": 3,
